fixed mobile display of invisible desktop content

--- a/perport.css
+++ b/perport.css
@@ -34,6 +34,7 @@ body {
 #mobile {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 #video {
@@ -416,7 +417,7 @@ body {
 }
 
 main {
-    visibility: hidden;
+    display: none;
 }
 
 /* desktop view ------------------------------- */
@@ -437,7 +438,7 @@ body {
 }
 
 main {
-    visibility: visible;
+    display: contents;
     filter: opacity(0);
     animation: fade-in 1s ease-in-out 3s forwards;
 }
